--- a/package.json
+++ b/package.json
@@ -57,9 +57,13 @@
     "url": "ssh://git@123.206.65.202:10022/dxz_php/php_node_js.git"
   },
   "scripts": {
+    "pm2_fragsvr": "pm2 start fragsvr.json --env production",
     "pm2": "pm2 start processes.json --env production",
     "start": "set NODE_ENV=production&&node ./bin/www",
     "dev": "set NODE_ENV=development&&node ./bin/www",
+    "frag_dev": "set NODE_ENV=development&&node ./bin/fragsvr",
+    "linux_frag_dev": "export NODE_ENV=development;supervisor ./bin/fragsvr &",
+    "linux_frag_start": "export NODE_ENV=production;nohup supervisor ./bin/fragsvr &",
     "mock": "set NODE_ENV=mock&&supervisor ./bin/www",
     "test": "set NODE_ENV=test&&supervisor ./bin/www",
     "linux_start": "export NODE_ENV=production;nohup supervisor ./bin/www &",
