--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "pm2": "pm2 start processes.json --env production",
     "start": "set NODE_ENV=production&&node ./bin/www",
     "dev": "set NODE_ENV=development&&node ./bin/www",
+    "yimin_start": "set NODE_ENV=production&&node ./bin/yimin_svr",
+    "yimin_dev": "set NODE_ENV=development&&node ./bin/yimin_svr",
     "frag_dev": "set NODE_ENV=development&&node ./bin/fragsvr",
     "linux_frag_dev": "export NODE_ENV=development;supervisor ./bin/fragsvr &",
     "linux_frag_start": "export NODE_ENV=production;nohup supervisor ./bin/fragsvr &",
