--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^3.0.0",
     "express": "^4.15.3",
     "express-recaptcha": "^3.0.0",
+    "express-session": "^1.15.6",
     "express-urlrewrite": "^1.2.0",
     "forwarded": "^0.1.0",
     "gulp-clean-css": "^3.7.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
+    "connect-redis": "^3.3.3",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-nodemon": "^2.2.1",
