--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-uglify": "^3.0.0",
     "lodash.isarray": "^4.0.0",
     "memory-cache": "^0.2.0",
+    "modify-filename": "^1.1.0",
     "morgan": "^1.8.2",
     "node-cache-redis": "^2.2.0",
     "nunjucks": "^3.0.1",
@@ -34,11 +35,14 @@
     "redis-connection-pool": "^1.6.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.2",
+    "rev-hash": "^2.0.0",
     "serve-favicon": "^2.4.3",
+    "sort-keys": "^2.0.0",
     "svg-captcha": "^1.3.11",
     "uglify": "^0.1.5",
     "underscore": "^1.8.3",
     "upyun": "^3.3.3",
+    "vinyl-file": "^3.0.0",
     "window-size": "^1.1.0"
   },
   "devDependencies": {
