--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "asap": "^2.0.6",
     "async": "^2.5.0",
     "body-parser": "^1.18.2",
+    "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
     "del": "^3.0.0",
