--- a/package.json
+++ b/package.json
@@ -68,17 +68,17 @@
     "pm2_yimin": "pm2 start processes_yimin.json --env production",
     "start": "set NODE_ENV=production&&node ./bin/www",
     "dev": "set NODE_ENV=development&&node ./bin/www",
-    "yimin_start": "set NODE_ENV=production&&node ./bin/yimin_svr",
-    "yimin_dev": "set NODE_ENV=development&&node ./bin/yimin_svr",
-    "frag_dev": "set NODE_ENV=development&&node ./bin/fragsvr",
+    "yimin_start": "set NODE_ENV=production&&node ./bin/yimin_svr &",
+    "yimin_dev": "set NODE_ENV=development&&node ./bin/yimin_svr &",
+    "frag_dev": "set NODE_ENV=development&&node ./bin/fragsvr &",
     "linux_frag_dev": "export NODE_ENV=development;supervisor ./bin/fragsvr &",
     "linux_frag_start": "export NODE_ENV=production;nohup supervisor ./bin/fragsvr &",
-    "mock": "set NODE_ENV=mock&&supervisor ./bin/www",
-    "test": "set NODE_ENV=test&&supervisor ./bin/www",
+    "mock": "set NODE_ENV=mock&&supervisor ./bin/www &",
+    "test": "set NODE_ENV=test&&supervisor ./bin/www &",
     "linux_start": "export NODE_ENV=production;nohup supervisor ./bin/www &",
-    "linux_dev": "export NODE_ENV=development; supervisor ./bin/www",
-    "linux_mock": "export NODE_ENV=mock; supervisor ./bin/www",
-    "linux_test": "export NODE_ENV=test; supervisor ./bin/www"
+    "linux_dev": "export NODE_ENV=development; supervisor ./bin/www &",
+    "linux_mock": "export NODE_ENV=mock; supervisor ./bin/www &",
+    "linux_test": "export NODE_ENV=test; supervisor ./bin/www &"
   },
   "author": "",
   "license": "ISC"
