--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "request-promise": "^4.2.2",
     "rev-hash": "^2.0.0",
     "serve-favicon": "^2.4.3",
+    "sha1": "^1.1.1",
     "sort-keys": "^2.0.0",
     "svg-captcha": "^1.3.11",
     "uglify": "^0.1.5",
