--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "browser-sync": "^2.18.13",
     "connect-redis": "^3.3.3",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-nodemon": "^2.2.1",
     "gulp-rev": "^8.1.1",
